# wasm-watermarker

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Gemfile  README.md  package-lock.json  package.json
bench/: .gitignore  Makefile
bench/jq/raw/: README  bench.js
bench/zlib/raw/: bench.js
cmake/: binaryen.cmake  cmdline.cmake  fmt.cmake
example/: add.wast  amount.zsh  test1.wast  test2.wast
example/ammo.js/: .gitignore  Makefile  benchmark.js  stress.js  test.js  testutils.js
example/zlib-wasm/: .gitignore  Makefile  benchmark.js  zlib-funcord-opswap.wasm  zlib-funcord.wasm  zlib-opswap.wasm  zlib-sample.wasm  zlib.js
lib/: CMakeLists.txt
lib/kyut/: BitStreamWriter.hpp  CircularBitStreamReader.hpp  Commutativity.hpp  Ordering-inl.hpp  Ordering.hpp  Reordering-inl.hpp  Reordering.hpp  SafeUnique.hpp
lib/kyut/methods/: ExportOrdering.hpp  ExportReordering.hpp  FunctionOrdering.hpp  FunctionReordering.hpp  OperandSwapping.cpp  OperandSwapping.hpp
lib/kyut/wasm-ext/: Compare-inl.hpp  Compare.hpp
scripts/: bench-size.zsh  bench-size4.zsh  bench-speed.zsh  bench-speed4.zsh  check_extract.rb  common.rb  embed.rb  embed.sh  extract.rb
server/: package-lock.json  package.json  tsconfig.json
server/src/: index.ts
server/static/: index.html
server/wasm/: add.wasm
src/: CMakeLists.txt  funccnt.cpp  kyuk.cpp  kyut.cpp  pisn.cpp  snpi.cpp  wasm-stat.cpp
src/kyut/: BitStreamReader.hpp  BitStreamWriter.hpp  CircularBitStreamReader.hpp  Commutativity.hpp  Comparator.hpp  Comparator.inl.hpp  bit_writer.hpp  circular_bit_stream.hpp  commutativity.hpp  comparison.hpp  side_effect.hpp
src/kyut/pass/: operand_swapping_extractor.cpp  operand_swapping_extractor.hpp  operand_swapping_watermarker.cpp  operand_swapping_watermarker.hpp  side_effect_checker.hpp
src/kyut/watermarker/: FunctionOrderingWatermarker.cpp  FunctionOrderingWatermarker.hpp  OperandSwappingWatermarker.cpp  OperandSwappingWatermarker.hpp
test/: CMakeLists.txt  test_BitStreamReader.cpp  test_BitStreamWriter.cpp  test_CircularBitStreamReader.cpp  test_Ordering.cpp  test_Reordering.cpp  test_SafeUnique.cpp  test_kyut.cpp
test/kyut/: test_BitStreamReader.cpp  test_BitStreamWriter.cpp  test_CircularBitStreamReader.cpp  test_Commutativity.cpp
test/kyut/watermarker/: test_FunctionOrderingWatermarker.cpp  test_OperandSwappingWatermarker.cpp
